rabbit/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-svc
spec:
  type: ClusterIP
  selector:
    app: rabbitmq
  ports:
  - name: http
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: ampq
    protocol: TCP
    port: 5672
    targetPort: 5672
